Anonymize data for demo purpose

--- a/src/elements/ami-viewer.html
+++ b/src/elements/ami-viewer.html
@@ -615,7 +615,8 @@
 
             // update series information
             this.$.renderer.patientID = series.patientID;
-            this.$.renderer.patientName = series.patientName;
+            this.$.renderer.patientName =
+              series.patientName !== 'Normative patient' ? 'Patient 7 months' : 'Normative patient';
             this.$.renderer.patientAge = series.patientAge;
             this.$.renderer.patientBorthdate = series.patientBorthdate;
             this.$.renderer.studyDate = series.studyDate;
