--- a/src/ra-app.html
+++ b/src/ra-app.html
@@ -380,6 +380,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       _handleStartGE(event) {
         const detail = event.detail;
+        console.log(event);
         this.set('feed', {
             href: detail.feedLink,
           }
