--- a/src/elements/viewer-global-controls.html
+++ b/src/elements/viewer-global-controls.html
@@ -4,6 +4,8 @@
 
 <!-- Iron elements -->
 <link rel="import" href="../../bower_components/iron-icon/iron-icon.html">
+<link rel="import" href="../../bower_components/iron-icon/iron-icon.html">
+<link rel="import" href="../../bower_components/iron-icons/image-icons.html">
 <link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../../bower_components/iron-icons/device-icons.html">
 <link rel="import" href="../../bower_components/iron-icons/editor-icons.html">
@@ -147,10 +149,12 @@
       <div hidden$="[[collapse]]" class="expand">
         <div class="label">Layout</div>
         <iron-selector selected="{{layout}}">
-          <paper-icon-button icon="layout-icons:layout-0"></paper-icon-button>
-          <paper-icon-button icon="layout-icons:layout-1"></paper-icon-button>
-          <paper-icon-button icon="layout-icons:layout-2"></paper-icon-button>
-          <paper-icon-button icon="layout-icons:layout-3"></paper-icon-button>
+          <!-- layout-icons:layout-0 -->
+          <paper-icon-button icon="image:filter-1"></paper-icon-button>
+          <paper-icon-button icon="image:filter-2"></paper-icon-button>
+          <paper-icon-button icon="image:filter-3"></paper-icon-button>
+          <paper-icon-button icon="image:filter-4"></paper-icon-button>
+          <paper-icon-button icon="image:filter-6"></paper-icon-button>
         </iron-selector>
       </div>
 
