--- a/src/elements/gex-layout-manager.html
+++ b/src/elements/gex-layout-manager.html
@@ -68,9 +68,9 @@
       }
 
       .active {
-        border-bottom: 1px solid var(--accent-color);
-        border-left: 1px solid var(--accent-color);
-        border-right: 1px solid var(--accent-color);
+        border: 1px solid var(--accent-color);
+        /* border-left: 1px solid var(--accent-color);
+        border-right: 1px solid var(--accent-color); */
       }
 
       [hidden] {
