--- a/src/elements/viewer-global-controls.html
+++ b/src/elements/viewer-global-controls.html
@@ -149,12 +149,11 @@
       <div hidden$="[[collapse]]" class="expand">
         <div class="label">Layout</div>
         <iron-selector selected="{{layout}}">
-          <!-- layout-icons:layout-0 -->
-          <paper-icon-button icon="image:filter-1"></paper-icon-button>
-          <paper-icon-button icon="image:filter-2"></paper-icon-button>
-          <paper-icon-button icon="image:filter-3"></paper-icon-button>
-          <paper-icon-button icon="image:filter-4"></paper-icon-button>
-          <paper-icon-button icon="image:filter-6"></paper-icon-button>
+          <paper-icon-button icon="layout-icons:layout-0"></paper-icon-button>
+          <paper-icon-button icon="layout-icons:layout-1"></paper-icon-button>
+          <paper-icon-button icon="layout-icons:layout-2"></paper-icon-button>
+          <paper-icon-button icon="layout-icons:layout-3"></paper-icon-button>
+          <paper-icon-button icon="layout-icons:layout-4"></paper-icon-button>
         </iron-selector>
       </div>
 
