--- a/src/elements/layout-icons.html
+++ b/src/elements/layout-icons.html
@@ -26,6 +26,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <g id="layout-3">
         <path d="M96,1H50H4C2.343,1,1,2.343,1,4v46v46c0,1.657,1.343,3,3,3h46h46c1.657,0,3-1.343,3-3V50V4 C99,2.343,97.657,1,96,1z M93,47H53V7h40V47z M7,7h40v40H7V7z M7,53h40v40H7V53z M93,93H53V53h40V93z"></path>
       </g>
+      <g id="layout-4">
+        <path d="M96,1H65.333H34.667H4C2.343,1,1,2.343,1,4v46v46c0,1.657,1.343,3,3,3h30.667h30.667H96c1.657,0,3-1.343,3-3 V50V4C99,2.343,97.657,1,96,1z M93,47H68.333V7H93V47z M62.333,47H37.667V7h24.667V47z M7,7h24.667v40H7V7z M7,53h24.667v40H7V53z M37.667,53h24.667v40H37.667V53z M93,93H68.333V53H93V93z"></path>
+      </g>
     </defs>
   </svg>
 </iron-iconset-svg>
